# MacinConvert-Atmos-Tool

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md  RELEASE_NOTES.md
.githooks/: pre-commit
.github/workflows/: build.yml
scripts/: setup-hooks.sh
src/: channels.rs  cli.rs  decoder.rs  error.rs  flac_converter.rs  format.rs  main.rs  merger.rs  tools.rs
