[package]
name = "MacinConvert-Atmos-Tool"
version = "0.1.0"
edition = "2021"
authors = ["Sakuzy"]
description = "在 macOS 上将杜比全景声音频转换为多声道 WAV 文件的 CLI 工具/CLI tool for converting Dolby Atmos audio to multi-channel WAV files on macOS"

[[bin]]
name = "MacinConvert-Atmos-Tool"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hound = "3.5"
ndarray = "0.15"
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
